[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birchrest"
version = "0.1.0"
description = "A simple framework for setting up APIs."
authors = [{ name = "Alexander Engström", email = "alexander@engstrom.ae" }]
license = { text = "MIT" }
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.8"
keywords = ["api", "rest", "framework", "web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

# List of dependencies required to install and use the package
dependencies = [
    "colorama"
]

[project.urls]
homepage = "https://github.com/alexandengstrom/birchrest"
repository = "https://github.com/alexandengstrom/birchrest"
documentation = "https://github.com/alexandengstrom/birchrest/wiki"

[tool.setuptools]
# Automatically include all packages in the birchrest directory
packages = ["birchrest"]

[tool.setuptools.package-data]
# Include non-Python files like README.md or LICENSE, if needed
birchrest = ["*.md", "*.txt"]
